# netbox-skill

./: .gitignore  CLAUDE.md  pyproject.toml
docs/superpowers/plans/: 2026-04-02-netbox-skill-implementation.md
docs/superpowers/specs/: 2026-04-02-netbox-skill-design.md
src/netbox_skill/: __init__.py  config.py  exceptions.py
src/netbox_skill/clients/: __init__.py  netbox.py  ssh.py
src/netbox_skill/models/: __init__.py  common.py  discovery.py  netbox.py  rack_vision.py
src/netbox_skill/parsers/: __init__.py  fs_com.py  netgear.py  registry.py  sonic.py
src/netbox_skill/services/: discovery.py  netbox.py  orchestrator.py  rack_vision.py
src/netbox_skill/transports/: __init__.py
src/netbox_skill/vision/: __init__.py  base.py  claude.py
tests/fixtures/fs_com/: show_arp.txt  show_interface_status.txt  show_lldp_neighbors.txt  show_mac_address_table.txt  show_version.txt  show_vlan.txt
tests/fixtures/netgear/: show_arp.txt  show_interfaces_status_all.txt  show_lldp_remote_device_all.txt  show_mac_address_table.txt  show_version.txt  show_vlan_brief.txt
tests/fixtures/sonic/: show_arp.txt  show_interfaces_status.txt  show_lldp_table.txt  show_mac.txt  show_platform_summary.txt  show_vlan_brief.txt
tests/unit/: test_config.py  test_exceptions.py  test_models_common.py  test_models_discovery.py  test_models_netbox.py  test_models_rack_vision.py
tests/unit/clients/: test_netbox_client.py  test_ssh_client.py
tests/unit/parsers/: test_fs_com.py  test_netgear.py  test_registry.py  test_sonic.py
tests/unit/services/: test_discovery_service.py  (+3 more)
(+12 files in other folders)
