[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netbox-skill"
version = "0.1.0"
description = "NetBox integration, network device discovery, and AI-powered rack population service"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "asyncssh>=2.14.0",
    "pydantic>=2.0",
    "mcp[cli]>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
netbox-skill-mcp = "netbox_skill.transports.mcp.server:main"
netbox-skill-http = "netbox_skill.transports.http.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/netbox_skill"]
